// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InitializedMDXEditor - Snapshots > matches snapshot in markdown mode 1`] = `
<div
  class="gap-4"
>
  <div
    class=""
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          class="size-6"
          data-testid="type-icon"
        >
          <title>
            Type
          </title>
        </svg>
      </button>
    </div>
    <textarea
      class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
    />
  </div>
  <div
    class="dark-theme cursor-auto hidden"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class=""
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          data-testid="markdown-mark-icon"
        >
          <title>
            Markdown Mark
          </title>
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with approaching max length warning 1`] = `
<div>
  <div
    class="gap-4"
  >
    <div
      class="hidden"
      data-override-defaults="true"
    >
      <div
        aria-label="Markdown editing toolbar"
        class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
        data-override-defaults="true"
        data-testid="markdown-toolbar"
        role="toolbar"
      >
        <button
          class="size-7 cursor-default rounded"
          data-size="icon"
          data-testid="markdown-emoji-button"
          data-variant="ghost"
          title="Emoji"
        >
          <svg
            class="size-6"
            data-testid="smile-icon"
          >
            <title>
              Smile
            </title>
          </svg>
        </button>
        <button
          class="size-7 cursor-default rounded disabled:pointer-events-auto"
          data-size="icon"
          data-testid="markdown-richtext-button"
          data-variant="ghost"
          title="Rich Text"
        >
          <svg
            class="size-6"
            data-testid="type-icon"
          >
            <title>
              Type
            </title>
          </svg>
        </button>
      </div>
      <textarea
        class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
        data-testid="markdown-textarea"
        maxlength="1000"
        placeholder="Start writing your masterpiece"
      />
    </div>
    <div
      class="dark-theme cursor-auto"
      data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
      data-placeholder="Start writing your masterpiece"
      data-plugins-count="10"
      data-testid="mdx-editor"
      markdown=""
    >
      <div
        data-testid="toolbar"
      >
        <button
          data-testid="undo-redo"
        >
          Undo/Redo
        </button>
        <button
          data-testid="block-type-select"
        >
          Block Type
        </button>
        <button
          data-testid="bold-italic-toggles"
        >
          Bold/Italic
        </button>
        <button
          data-testid="strikethrough-toggle"
        >
          Strikethrough
        </button>
        <button
          data-testid="lists-toggle"
        >
          Lists
        </button>
        <button
          data-testid="insert-thematic-break"
        >
          Insert Break
        </button>
        <button
          data-testid="create-link"
        >
          Create Link
        </button>
        <button
          data-testid="code-toggle"
        >
          Code
        </button>
        <button
          data-testid="insert-code-block"
        >
          Insert Code Block
        </button>
        <button
          data-testid="button-with-tooltip-emoji"
          title="Emoji"
        >
          <svg
            class="size-6"
            data-testid="smile-icon"
          >
            <title>
              Smile
            </title>
          </svg>
        </button>
        <button
          class="opacity-50!"
          data-testid="button-with-tooltip-clear content to switch modes"
          disabled=""
          title="Clear content to switch modes"
        >
          <svg
            class="size-6"
            data-testid="markdown-mark-icon"
          >
            <title>
              Markdown Mark
            </title>
          </svg>
        </button>
      </div>
      <div
        data-testid="editor-content"
      >
        Editor Content
      </div>
    </div>
    <div
      class="cursor-auto flex-row items-center gap-x-2 rounded-md p-2 bg-yellow-500/15 text-yellow-500"
      data-testid="max-length-warning"
    >
      <svg
        class="size-4 shrink-0"
        data-testid="alert-triangle-icon"
      >
        <title>
          Alert Triangle
        </title>
      </svg>
      <span
        class="text-sm"
        data-override-defaults="true"
      >
        You're approaching the maximum character limit.
      </span>
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          class="size-6"
          data-testid="type-icon"
        >
          <title>
            Type
          </title>
        </svg>
      </button>
    </div>
    <textarea
      class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
    />
  </div>
  <div
    class="custom-editor-class"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class=""
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          data-testid="markdown-mark-icon"
        >
          <title>
            Markdown Mark
          </title>
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with default props 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          class="size-6"
          data-testid="type-icon"
        >
          <title>
            Type
          </title>
        </svg>
      </button>
    </div>
    <textarea
      class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
    />
  </div>
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class=""
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          data-testid="markdown-mark-icon"
        >
          <title>
            Markdown Mark
          </title>
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with emoji picker open 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          class="size-6"
          data-testid="type-icon"
        >
          <title>
            Type
          </title>
        </svg>
      </button>
    </div>
    <textarea
      class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
    />
  </div>
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class=""
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          data-testid="markdown-mark-icon"
        >
          <title>
            Markdown Mark
          </title>
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
  <div
    data-testid="emoji-picker-dialog"
  >
    <button
      data-testid="emoji-select-button"
    >
      Select Emoji
    </button>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with markdown content 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          class="size-6"
          data-testid="type-icon"
        >
          <title>
            Type
          </title>
        </svg>
      </button>
    </div>
    <textarea
      class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
    />
  </div>
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown="# Test Content"
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="opacity-50!"
        data-testid="button-with-tooltip-clear content to switch modes"
        disabled=""
        title="Clear content to switch modes"
      >
        <svg
          class="size-6"
          data-testid="markdown-mark-icon"
        >
          <title>
            Markdown Mark
          </title>
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with reached max length warning 1`] = `
<div>
  <div
    class="gap-4"
  >
    <div
      class="hidden"
      data-override-defaults="true"
    >
      <div
        aria-label="Markdown editing toolbar"
        class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
        data-override-defaults="true"
        data-testid="markdown-toolbar"
        role="toolbar"
      >
        <button
          class="size-7 cursor-default rounded"
          data-size="icon"
          data-testid="markdown-emoji-button"
          data-variant="ghost"
          title="Emoji"
        >
          <svg
            class="size-6"
            data-testid="smile-icon"
          >
            <title>
              Smile
            </title>
          </svg>
        </button>
        <button
          class="size-7 cursor-default rounded disabled:pointer-events-auto"
          data-size="icon"
          data-testid="markdown-richtext-button"
          data-variant="ghost"
          title="Rich Text"
        >
          <svg
            class="size-6"
            data-testid="type-icon"
          >
            <title>
              Type
            </title>
          </svg>
        </button>
      </div>
      <textarea
        class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
        data-testid="markdown-textarea"
        maxlength="1000"
        placeholder="Start writing your masterpiece"
      />
    </div>
    <div
      class="dark-theme cursor-auto"
      data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
      data-placeholder="Start writing your masterpiece"
      data-plugins-count="10"
      data-testid="mdx-editor"
      markdown=""
    >
      <div
        data-testid="toolbar"
      >
        <button
          data-testid="undo-redo"
        >
          Undo/Redo
        </button>
        <button
          data-testid="block-type-select"
        >
          Block Type
        </button>
        <button
          data-testid="bold-italic-toggles"
        >
          Bold/Italic
        </button>
        <button
          data-testid="strikethrough-toggle"
        >
          Strikethrough
        </button>
        <button
          data-testid="lists-toggle"
        >
          Lists
        </button>
        <button
          data-testid="insert-thematic-break"
        >
          Insert Break
        </button>
        <button
          data-testid="create-link"
        >
          Create Link
        </button>
        <button
          data-testid="code-toggle"
        >
          Code
        </button>
        <button
          data-testid="insert-code-block"
        >
          Insert Code Block
        </button>
        <button
          data-testid="button-with-tooltip-emoji"
          title="Emoji"
        >
          <svg
            class="size-6"
            data-testid="smile-icon"
          >
            <title>
              Smile
            </title>
          </svg>
        </button>
        <button
          class="opacity-50!"
          data-testid="button-with-tooltip-clear content to switch modes"
          disabled=""
          title="Clear content to switch modes"
        >
          <svg
            class="size-6"
            data-testid="markdown-mark-icon"
          >
            <title>
              Markdown Mark
            </title>
          </svg>
        </button>
      </div>
      <div
        data-testid="editor-content"
      >
        Editor Content
      </div>
    </div>
    <div
      class="cursor-auto flex-row items-center gap-x-2 rounded-md p-2 bg-red-500/15 text-red-500"
      data-testid="max-length-warning"
    >
      <svg
        class="size-4 shrink-0"
        data-testid="alert-triangle-icon"
      >
        <title>
          Alert Triangle
        </title>
      </svg>
      <span
        class="text-sm"
        data-override-defaults="true"
      >
        You've reached the maximum character limit.
      </span>
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with readOnly prop 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        disabled=""
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        disabled=""
        title="Rich Text"
      >
        <svg
          class="size-6"
          data-testid="type-icon"
        >
          <title>
            Type
          </title>
        </svg>
      </button>
    </div>
    <textarea
      class="max-h-[60dvh] min-h-11 resize-none rounded-none border-none p-0 pt-4 shadow-none outline-none placeholder:text-muted-foreground/70 focus-visible:border-none focus-visible:ring-0"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      readonly=""
    />
  </div>
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-readonly="true"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          class="size-6"
          data-testid="smile-icon"
        >
          <title>
            Smile
          </title>
        </svg>
      </button>
      <button
        class=""
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          data-testid="markdown-mark-icon"
        >
          <title>
            Markdown Mark
          </title>
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;
